--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.33.0",
     "uuid": "^9.0.1",
+    "yarn": "^1.22.21",
     "yup": "^1.3.2"
   },
   "devDependencies": {
